# dqmj1_info

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE.md  cutscenes.html  dqmj1_info.yml  dqmj1_save_file.hexpat  event_commands.html  event_instructions.html  events.html  extract_dqmj1_files.py  extract_files_gui.py  extract_string_address_tables.py  extract_strings.py  find_strings.py  genindex.html  index.html  monsters.html  objects.inv  pyproject.toml  read_strings_from_binary.py  recompile_dqmj1_files.py  rng.html  save_data.py  save_files.html  search.html  searchindex.js  string_convert.py  strings.html  synthesis.html
_sources/: events.rst.txt  index.rst.txt  monsters.rst.txt  strings.rst.txt  synthesis.rst.txt
data/: monsters.csv
docs/: conf.py  cutscenes.rst  event_commands.rst  event_instructions.rst  events.rst  index.rst  monsters.rst  rng.rst  save_files.rst  strings.rst  synthesis.rst
dqmj1_info/: __init__.py  __main__.py  ability_tbl.py  battle_enemy_parameters_table.py  btl_enmy_prm.py  character_encoding.py  child_monster_gender_simulation.py  compile_evt.py  d16.py  d16_to_png.py  decompile_evt.py  demo_evt.py  enmy_kind_tbl.py  evt.py  extract_files.py  extract_fpks.py  extract_script_dialogue.py  extract_string_address_tables.py  extract_strings.py  find_strings.py  fpk.py  item_table.py  item_tbl.py  meta_info.py  monster_species_table.py  nsbca.py  read_strings_from_binary.py  recompile_files.py  rng_simulator.py  save_data.py  simulate_event.py  skill_set_table.py  skill_sets_to_wiki.py  skill_tbl.py  string_convert.py  string_tables.py  summaraize_save_file.py
encodings/: dqmj1_strings.tbl
pattern_files/: dqmj1_enemy_kind_table_file.hexpat  dqmj1_item_table_file.hexpat  dqmj1_ram.hexpat  dqmj1_save_file.hexpat  dqmj1_skill_table_file.hexpat  dqmj1_status_data_file.hexpat
patterns/: AbilityTbl.bin.hexpat  d16.hexpat  dqmj1_AbilityTbl.hexpat  dqmj1_BtlEnmyPrm.hexpat  dqmj1_enemy_kind_table_file.hexpat  dqmj1_evt.hexpat  dqmj1_field_enemy_prm_file.hexpat  dqmj1_field_monster_prm_file.hexpat  dqmj1_fpk.hexpat  dqmj1_item_table_file.hexpat  dqmj1_item_table_file_jp.hexpat  dqmj1_map.hexpat  dqmj1_pos.hexpat  dqmj1_ram.hexpat  dqmj1_save_file.hexpat  dqmj1_scn.hexpat  dqmj1_skill_table_file.hexpat  dqmj1_skill_table_file_JP.hexpat  monster.hexpat  player_info.hexpat
(+22 files in other folders)
