[project]
name = "dqmj1_info"
version = "0.0.1"
dependencies = ["numpy", "pandas", "Pillow"]

[project.scripts]
dqmj1_extract_files = "dqmj1_info:extract_files.main_without_args"
dqmj1_compile_evt = "dqmj1_info:compile_evt.main_without_args"
dqmj1_decompile_evt = "dqmj1_info:decompile_evt.main_without_args"
d16_to_png = "dqmj1_info:d16_to_png.main_without_args"
dqmj1_simulate_event = "dqmj1_info:simulate_event.main_without_args"

[tool.setuptools]
packages = ["dqmj1_info"]

[tool.setuptools.package-data]
dqmj1_info = ["data/event_instructions.csv"]