[project]
name = "dqmj1_info"
version = "0.0.1"
dependencies = ["numpy", "pandas", "Pillow", "gooey", "colored==1.4.4"]

[project.scripts]
dqmj1_extract_files = "dqmj1_info:extract_files.main_cli"
dqmj1_extract_files_gui = "dqmj1_info:extract_files.main_gui"
dqmj1_recompile_files = "dqmj1_info:recompile_files.main_cli"
dqmj1_recompile_files_gui = "dqmj1_info:recompile_files.main_gui"
dqmj1_compile_evt = "dqmj1_info:compile_evt.main_without_args"
dqmj1_decompile_evt = "dqmj1_info:decompile_evt.main_without_args"
d16_to_png = "dqmj1_info:d16_to_png.main_without_args"
dqmj1_simulate_event = "dqmj1_info:simulate_event.main_without_args"
dqmj1_summaraize_save_file = "dqmj1_info:summaraize_save_file.main_without_args"

[tool.setuptools]
packages = ["dqmj1_info", "dqmj1_info.region_configs"]

[tool.setuptools.package-data]
dqmj1_info = ["data/event_instructions.csv"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
strict = true